# kusatsu

./: .gitignore  Cargo.toml  README.md
kusatsu-backend/: Cargo.toml
kusatsu-backend/src/: chunk_storage.rs  config.rs  database.rs  error.rs  handlers.rs  lib.rs  main.rs  storage.rs
kusatsu-cli/: Cargo.toml  README.md
kusatsu-cli/src/: main.rs
kusatsu-encrypt/: Cargo.toml
kusatsu-encrypt/examples/: basic_usage.rs
kusatsu-encrypt/src/: lib.rs
kusatsu-entity/: Cargo.toml
kusatsu-entity/src/: file.rs  lib.rs  prelude.rs  upload_session.rs
kusatsu-frontend/: Cargo.toml  index.css  index.html  tailwind.config.js
kusatsu-frontend/src/: main.rs
kusatsu-frontend/src/components/: back.rs  download.rs  errors.rs  header.rs  mod.rs  progress.rs  upload.rs
kusatsu-frontend/src/services/: api.rs
kusatsu-frontend/src/utils/: file_utils.rs  mod.rs  url_utils.rs
kusatsu-migration/: Cargo.toml
kusatsu-migration/src/: lib.rs  m20231101_000001_create_files_table.rs  m20231102_000001_create_upload_sessions_table.rs  main.rs
kusatsu-types/: Cargo.toml
kusatsu-types/src/: lib.rs
