[package]
name = "kusatsu-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for Kusatsu file sharing"

[dependencies]
tokio = { workspace = true, features = ["fs"] }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
reqwest = { version = "0.11", features = ["json", "multipart"] }
mime_guess = { workspace = true }
indicatif = "0.17"

# Local dependencies
kusatsu-encrypt = { path = "../kusatsu-encrypt" }
kusatsu-types = { path = "../kusatsu-types" }