[package]
name = "kusatsu-encrypt"
version = "0.1.0"
edition = "2021"
description = "Client-side encryption/decryption for Kusatsu file sharing"

[dependencies]
aes-gcm = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
zeroize = { version = "1.7", features = ["derive"] }